# ModuleWarden

./: .dockerignore  .env.example  .env.leonardo-example  .gitignore  .gitlab-ci.yml  .leonardo-vllm-state  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MILESTONES.md  ModuleWarden-deck.pptx  Module_Warden.pptx  README.md  REPORT.md  docker-compose.e2e-validation.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.base.json
finetune/python/: .gitignore  HACKATHON_NOTES.md  PR_BODY.md  README.md  RECIPE_A_LAUNCH.md  __init__.py  pyproject.toml
finetune/python/data/: __init__.py  figshare_adapter.py  ingestion_hardening.py  injection_hardening.py  injection_payloads.py
finetune/python/decepticon/: MODELS.md  PIPELINE-PLACEMENT.md  ROLE-AND-SIZING.md  SERVE.md  __init__.py  adversary.py  config_check.py  coverage.py  fetch-models.sh  mapper.py  model_client.py
finetune/python/eval/: CLASSIFIER-FLOOR-FINDINGS.md  __init__.py  classifier-floor-metrics.json  classifier-floor-report.md  constrained_decode.py  corpus-metrics.json  corpus_report.py  finetune-metrics.attck.json  finetune-metrics.test.json  forecast_calibration.py  injection_robustness.py  matrix_runner.py  metrics.py  minionerec_constraint.py  pi_harness_wrapper.py  proof_evidence_masking.py  test_malware_classifier_vectorize.py
finetune/python/pipeline/: __init__.py  corpus_walker.py  decepticon_augmentor.py  dossier_builder.py  raw_bundles_walker.py  report_template.py  scanner_evidence.py  sft_pair_builder.py  version_pair_extractor.py
finetune/python/pitch/: README.md  demo-runbook.md  insurance-economics-slides.md  preflight-checklist.md  q-and-a-prep.md  redteam-findings.md  slide-deck.md  track-reframes.md  underwriter-economics.md  video-script.md
finetune/python/scripts/: synthesize_data.py  vast_smoke.py
finetune/python/serving/: __init__.py  acting_agent.py  dependency_forecast.py  forecast_drift.py  grounding.py  prompt_defense.py  spiral_brake.py  sybilion_alerts.py  sybilion_budget.py  sybilion_forecast.py  verify_sybilion.py
finetune/python/slurm/: train_qwen3.6.slurm
finetune/python/steering/: __init__.py  activation_steering.py  calibrate.py  conditional.py  contrastive_prompts.py  (+1 more)
(+423 files in other folders)
