[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modulewarden-finetune"
version = "0.1.0"
description = "Python sibling to finetune/: dossier/report/SFT pipeline + H100 training + 4-arm eval"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ModuleWarden contributors"}
]

dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
training = [
    "torch>=2.3",
    "transformers>=4.45",
    "accelerate>=0.34",
    "datasets>=2.20",
    "peft>=0.13",
    "trl>=0.11",
]
eval = [
    "torch>=2.3",
    "transformers>=4.45",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "training*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
