[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modulewarden-finetune"
version = "0.1.0"
description = "Python sibling to finetune/: dossier/report/SFT pipeline + H100 training + 4-arm eval"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ModuleWarden contributors"}
]

dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.21",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
training = [
    "torch>=2.3",
    "transformers>=4.45",
    "accelerate>=0.34",
    "datasets>=2.20",
    "peft>=0.13",
    "trl>=0.11",
]
eval = [
    "torch>=2.3",
    "transformers>=4.45",
]
inference = [
    # outlines provides JSON-schema constrained decoding at inference time.
    # See decision-3 in the backlog for why this is preferred over either
    # the Unsloth swap or a MiniOneRec port.
    "outlines>=0.0.46",
    "pydantic>=2.0",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "training*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
